--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.0",
+        "biscolab/laravel-recaptcha": "^6.1",
         "laravel/framework": "^11.9",
         "laravel/socialite": "^5.19",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "mckenziearts/laravel-notify": "^2.5",
         "midtrans/midtrans-php": "^2.6",
         "nesbot/carbon": "^3.8",
