--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.14",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "tailwind-scrollbar-hide": "^2.0.0"
     }
 }
